# tree-sitter-mustache

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mustache.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mustache/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMustache/: mustache.h
bindings/swift/TreeSitterMustacheTests/: TreeSitterMustacheTests.swift
queries/: folds.scm  highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comment.txt  delimiter.txt  real_world_example.txt  section.txt  statement.txt  text.txt
